gitops/apps/auth/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    application: auth
