gitops/apps/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: togglemaster
  labels:
    app.kubernetes.io/name: auth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
  ports:
    - port: 80
      targetPort: 80
      name: http
